# data_downloader

./: Cargo.toml  LICENSE-MIT  README.md  justfile  roadmap.md  rustfmt.toml
.github/workflows/: audit.yaml  ci.yaml  periodic_audit.yaml
src/: builder.rs  downloader.rs  hashed.rs  lib.rs  utils.rs
src/files/: audio.rs  common_3d_models.rs  images.rs  misc.rs  ml.rs  mod.rs
src/files/images/: flags.rs
src/files/ml/: whisper_cpp.rs
tests/: proptests.rs  tests.rs
