[package]
name = "data_downloader"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple way to download and cache files"
documentation = "https://docs.rs/data_downloader"
authors = ["Till Arnold"]
keywords = ["download", "reference_data"]
repository = "https://github.com/tillarnold/data_downloader"
categories = ["filesystem", "caching", "network-programming"]
exclude = [
    "/rustfmt.toml",
    "/.github/*"
]
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dirs = "5.0.1"
hex-literal = "0.4.1"
reqwest = { version ="0.11.18", features = ["blocking"]}
sha2 = "0.10.7"
thiserror = "1.0.44"
zip = "0.6.6"


[dev-dependencies]
proptest = "1.2.0"
